--- a/frontend/src/production_index.html
+++ b/frontend/src/production_index.html
@@ -1,32 +1,35 @@
-<html ng-app="myApp" ng-strict-di check-route-error>
+<html ng-app="myApp" force-login ng-strict-di check-route-error>
 <head>
-	<title ng-bind="$root.title"></title>
+	<title ng-bind="$root.appTitle"></title>
 	<link rel="stylesheet" type="text/css" href="css/build.css">
 	<script src="js/build.js"></script>
 
-	<!--<link href='http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css' rel='stylesheet' type='text/css'>-->
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
+
 <body>
-	<aside>
-		<div class='aside-logo'>
-		</div>
+	<div class="loading" show-while-resolving></div>
+	<aside id="leftMenu" close-on-success>
+		<user-info></user-info>
 		<nav>
 			<ul>
 				<li link-route='/veterans'>
 					<span>Veterans</span>
 					<!--<span class='ion-ios-bookmarks'></span>-->
 				</li>
-				<li link-route='/newbies'>
-					<span>Newbies</span>
+				<li link-route='/newcomers'>
+					<span>Newcomers</span>
 				</li>			
 				<li link-route='/people'>
 					<span>Everyone</span>
 				</li>			
 			</ul>
+			
 		</nav>
 	</aside>
 	<main>
-		<div ng-view></div>
+		<div class="fade" ng-view></div>
 	</main>
 </body>
 </html>
