real API, Auth, Storage, tweaks

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -21,13 +21,9 @@
 		<user-info></user-info>
 		<nav>
 			<ul>
-				<li link-route='/veterans'>
-					<span>Veterans</span>
-					<!--<span class='ion-ios-bookmarks'></span>-->
+				<li link-route='/judgement'>
+					<span>Judge</span>
 				</li>
-				<li link-route='/newcomers'>
-					<span>Newcomers</span>
-				</li>			
 				<li link-route='/people'>
 					<span>Everyone</span>
 				</li>			
