--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,12 +5,12 @@
 	<script src='js/angular.js'></script>
 	<script src="js/angular-route.js"></script>
 	<script src="js/angular-animate.js"></script>
-	<script src="js/ng-notify.js"></script>
+	<script src="js/ng-notify.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
 	<script src="js/directives.js"></script>
 	<script src="js/services.js"></script>
-	
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 
@@ -25,9 +25,9 @@
 				</li>
 				<li link-route='/people'>
 					<span>Everyone</span>
-				</li>			
+				</li>
 			</ul>
-			
+
 		</nav>
 	</aside>
 	<main>
